Changed theme name before styling

--- a/packages/sus-theme/package.json
+++ b/packages/sus-theme/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@frontity/mars-theme",
-  "version": "1.6.2",
-  "description": "A starter theme for Frontity",
+  "name": "sus-theme",
+  "version": "1.0",
+  "description": "Susanne Eneroths Frontity Theme",
   "keywords": [
     "frontity",
     "frontity-theme"
