--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "@frontity/wp-source": "^1.11.7",
     "@frontity/tiny-router": "^1.4.4",
     "@frontity/html2react": "^1.7.0",
-    "@frontity/mars-theme": "./packages/mars-theme"
+    "sus-theme": "./packages/sus-theme"
   }
 }
