--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,9 @@ dist
 # TernJS port file
 .tern-port
 .vercel
+# Layer0 generated build directory
+.layer0
+# Layer0 generated build directory
+.layer0
+# Layer0 generated build directory
+.layer0
