--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "scripts": {
+    "layer0:dev": "layer0 dev",
+    "layer0:build": "layer0 build",
+    "layer0:deploy": "layer0 deploy",
+    "dev": "frontity dev",
+    "build": "frontity build",
+    "serve": "frontity serve"
+  },
   "name": "exjobb-susanne-theme",
   "version": "1.0.0",
   "private": true,
@@ -9,11 +17,6 @@
   "engines": {
     "node": ">=10.0.0",
     "npm": ">=6.0.0"
-  },
-  "scripts": {
-    "dev": "frontity dev",
-    "build": "frontity build",
-    "serve": "frontity serve"
   },
   "prettier": {},
   "dependencies": {
@@ -28,5 +31,13 @@
     "frontity": "^1.17.2",
     "my-package": "^0.0.0",
     "webfontloader": "^1.6.28"
+  },
+  "devDependencies": {
+    "@layer0/cli": "^4.13.10",
+    "@layer0/core": "^4.13.10",
+    "@layer0/devtools": "^4.13.10",
+    "@layer0/frontity": "^4.13.10",
+    "@layer0/prefetch": "^4.13.10",
+    "@layer0/react": "^4.13.10"
   }
 }
